// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/SensorsList Default 1`] = `
<div
  className="p-6 pb-8"
>
  <h1
    className="text-2xl m-0 mb-2 text-black font-headline"
  >
    Sensoren
     
    <p
      className="inline-block sm:hidden transform -translate-y-0.5"
    >
      <button
        aria-describedby="device-id-and-anzeigename-tooltip"
        className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
        id="device-id-and-anzeigename-tooltip"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          aria-hidden={true}
        >
          ?
        </span>
        <span
          className="sr-only"
        >
          Device-ID und Anzeigename
           Erklärung
        </span>
      </button>
      <span
        className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
        id="device-id-and-anzeigename-tooltip"
        role="tooltip"
        style={
          Object {
            "width": "224px",
          }
        }
      >
        <span
          aria-hidden={true}
          className="absolute w-0 h-0 -top-2 left-2"
          style={
            Object {
              "borderBottom": "solid rgb(30, 26, 90) 8px",
              "borderLeft": "solid transparent 8px",
              "borderRight": "solid transparent 8px",
            }
          }
        />
        <span>
          Die
        </span>
        <img
          alt="A microcontroller icon"
          className="inline-block w-4 h-4 mx-1"
          src="/images/illustrations/microcontroller-1.svg"
        />
        <span>
          Device-ID muss mit der Device-ID in der TTN-Konsole übereinstimmen. Sie ist für andere Stadtpuls-Nutzer:innen nicht sichtbar.
        </span>
        <br />
        <span>
          Der darauf folgende Anzeigename ist frei wählbar und für andere sichtbar. Werde kreativ!
        </span>
      </span>
    </p>
  </h1>
  <div
    className="w-full max-w-full overflow-y-hidden overflow-x-auto pb-16"
  >
    <table
      className="w-full text-left"
    >
      <thead
        className="font-normal"
      >
        <tr
          className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <th
            className="sm:py-3 sm:pr-3 sm:pl-0 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Device-ID
             
            <p
              className="hidden sm:inline-block transform -translate-y-0.5"
            >
              <button
                aria-describedby="device-id-tooltip"
                className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
                id="device-id-tooltip"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                >
                  ?
                </span>
                <span
                  className="sr-only"
                >
                  Device-ID
                   Erklärung
                </span>
              </button>
              <span
                className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
                id="device-id-tooltip"
                role="tooltip"
                style={
                  Object {
                    "width": "224px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                  className="absolute w-0 h-0 -top-2 left-2"
                  style={
                    Object {
                      "borderBottom": "solid rgb(30, 26, 90) 8px",
                      "borderLeft": "solid transparent 8px",
                      "borderRight": "solid transparent 8px",
                    }
                  }
                />
                Nutze hier die exakte Device-ID aus Deiner TTN-Konsole. Die ID ist für andere Stadtpuls-Nutzer:innen nicht sichtbar.
              </span>
            </p>
          </th>
          <th
            className="w-full sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Anzeigename
             
            <p
              className="hidden sm:inline-block transform -translate-y-0.5"
            >
              <button
                aria-describedby="anzeigename-tooltip"
                className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
                id="anzeigename-tooltip"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                >
                  ?
                </span>
                <span
                  className="sr-only"
                >
                  Anzeigename
                   Erklärung
                </span>
              </button>
              <span
                className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
                id="anzeigename-tooltip"
                role="tooltip"
                style={
                  Object {
                    "width": "224px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                  className="absolute w-0 h-0 -top-2 left-2"
                  style={
                    Object {
                      "borderBottom": "solid rgb(30, 26, 90) 8px",
                      "borderLeft": "solid transparent 8px",
                      "borderRight": "solid transparent 8px",
                    }
                  }
                />
                Der Anzeigename kann frei gewählt werden und ist auch für andere Stadtpuls-Nutzer:innen öffentlich sichtbar. Werde kreativ!
              </span>
            </p>
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Letztes Signal
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
          <th
            className="pr-0 sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-1
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Neo
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            Vor ein paar Sekunden
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-2
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Triniti
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            Vor 7 Monaten
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-3
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Morpheus
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            —
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="text-right mt-8"
  >
    <button
      className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
      onClick={[Function]}
      type="button"
    >
      Sensor hinzufügen
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/SensorsList Empty 1`] = `
<div
  className="p-6 pb-8"
>
  <h1
    className="text-2xl m-0 mb-2 text-black font-headline"
  >
    Sensoren
     
    <p
      className="inline-block sm:hidden transform -translate-y-0.5"
    >
      <button
        aria-describedby="device-id-and-anzeigename-tooltip"
        className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
        id="device-id-and-anzeigename-tooltip"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          aria-hidden={true}
        >
          ?
        </span>
        <span
          className="sr-only"
        >
          Device-ID und Anzeigename
           Erklärung
        </span>
      </button>
      <span
        className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
        id="device-id-and-anzeigename-tooltip"
        role="tooltip"
        style={
          Object {
            "width": "224px",
          }
        }
      >
        <span
          aria-hidden={true}
          className="absolute w-0 h-0 -top-2 left-2"
          style={
            Object {
              "borderBottom": "solid rgb(30, 26, 90) 8px",
              "borderLeft": "solid transparent 8px",
              "borderRight": "solid transparent 8px",
            }
          }
        />
        <span>
          Die
        </span>
        <img
          alt="A microcontroller icon"
          className="inline-block w-4 h-4 mx-1"
          src="/images/illustrations/microcontroller-1.svg"
        />
        <span>
          Device-ID muss mit der Device-ID in der TTN-Konsole übereinstimmen. Sie ist für andere Stadtpuls-Nutzer:innen nicht sichtbar.
        </span>
        <br />
        <span>
          Der darauf folgende Anzeigename ist frei wählbar und für andere sichtbar. Werde kreativ!
        </span>
      </span>
    </p>
  </h1>
  <div
    className="w-full max-w-full overflow-y-hidden overflow-x-auto pb-16"
  >
    <table
      className="w-full text-left"
    >
      <thead
        className="font-normal"
      >
        <tr
          className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <th
            className="sm:py-3 sm:pr-3 sm:pl-0 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Device-ID
             
            <p
              className="hidden sm:inline-block transform -translate-y-0.5"
            >
              <button
                aria-describedby="device-id-tooltip"
                className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
                id="device-id-tooltip"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                >
                  ?
                </span>
                <span
                  className="sr-only"
                >
                  Device-ID
                   Erklärung
                </span>
              </button>
              <span
                className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
                id="device-id-tooltip"
                role="tooltip"
                style={
                  Object {
                    "width": "224px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                  className="absolute w-0 h-0 -top-2 left-2"
                  style={
                    Object {
                      "borderBottom": "solid rgb(30, 26, 90) 8px",
                      "borderLeft": "solid transparent 8px",
                      "borderRight": "solid transparent 8px",
                    }
                  }
                />
                Nutze hier die exakte Device-ID aus Deiner TTN-Konsole. Die ID ist für andere Stadtpuls-Nutzer:innen nicht sichtbar.
              </span>
            </p>
          </th>
          <th
            className="w-full sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Anzeigename
             
            <p
              className="hidden sm:inline-block transform -translate-y-0.5"
            >
              <button
                aria-describedby="anzeigename-tooltip"
                className="rounded-full text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring flex items-center justify-center"
                id="anzeigename-tooltip"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                >
                  ?
                </span>
                <span
                  className="sr-only"
                >
                  Anzeigename
                   Erklärung
                </span>
              </button>
              <span
                className="undefined -left-2 absolute top-9 h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
                id="anzeigename-tooltip"
                role="tooltip"
                style={
                  Object {
                    "width": "224px",
                  }
                }
              >
                <span
                  aria-hidden={true}
                  className="absolute w-0 h-0 -top-2 left-2"
                  style={
                    Object {
                      "borderBottom": "solid rgb(30, 26, 90) 8px",
                      "borderLeft": "solid transparent 8px",
                      "borderRight": "solid transparent 8px",
                    }
                  }
                />
                Der Anzeigename kann frei gewählt werden und ist auch für andere Stadtpuls-Nutzer:innen öffentlich sichtbar. Werde kreativ!
              </span>
            </p>
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Letztes Signal
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
          <th
            className="pr-0 sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          className="py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <td
            className="text-center align-middle p-0 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            colSpan={5}
            style={
              Object {
                "height": 50,
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset mt-8"
              onClick={[Function]}
              type="button"
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5 mr-2 -mt-0.5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              Ersten Sensor hinzufügen
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
